# back_breeze

./: .pylintrc  README.md  pyproject.toml
src/api_bb/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
src/api_bb/migrations/: 0001_initial.py  0002_album_genero_musica_remove_usuario_id_usuario_and_more.py  0002_alter_usuario_foto.py  0003_alter_artista_albuns.py  0003_alter_usuario_foto.py  0004_alter_usuario_genero_favoritos.py  0005_rename_genero_favoritos_usuario_generos_favoritos.py  0006_alter_album_capa_alter_artista_foto_and_more.py
src/breeze/: asgi.py  settings.py  urls.py  wsgi.py
