[project]
name = "breeze"
version = "0.1.0"
description = ""
authors = [
    {name = "aliszson",email = "aliszson@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10, <4.0"
dependencies = [
    "django (>=5.2.2,<6.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)"
]

[tool.taskipy.tasks]
qos = { cmd = "black src & isort src & pylint src", help = "Executa todas as ferramentas de qualidade de código."}

dev = { cmd = "python manage.py runserver", help = "Inicia o servidor de desenvolvimento do Django."}
migra = {cmd = "python manage.py makemigrations & python manage.py migrate", help = "Realizar migrações do banco."}


[tool.poetry]
packages = [{include = "breeze", from = "src"}]


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
pylint = "^3.3.7"
pylint-django = "^2.6.1"
taskipy = "^1.14.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
